# Hit

./: .cnb.yml  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  commit_msg.txt
.agents/: settings.json  settings.local.json
.agents/commands/: new-crate.md  run-phase.md
.agents/skills/code-review/: SKILL.md
.agents/skills/code-reviewer/: SKILL.md
.agents/skills/docs-review/: SKILL.md
.agents/skills/new-crate/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/reply-review/: SKILL.md
.agents/skills/security-reviewer/: SKILL.md
.agents/skills/test-flow/: SKILL.md
.agents/skills/verify/: SKILL.md
.atomcode/skills/release/: SKILL.md
.cnb/: buttons.yml
.github/workflows/: ci.yml  release.yml
.trae/: mcp.json
.trae/rules/: git-commit-message.md
crates/hit-cli/: Cargo.toml
crates/hit-cli/src/: cli.rs  main.rs  output.rs  progress.rs  tables.rs  tui.rs  welcome.rs
crates/hit-cli/src/commands/: bucket.rs  cache.rs  cleanup.rs  config.rs  doctor.rs  hold.rs  home.rs  info.rs  install.rs  list.rs  mod.rs  prefix.rs  reset.rs  search.rs  si.rs  status.rs  unhold.rs  uninstall.rs  update.rs  which.rs
crates/hit-common/: Cargo.toml
crates/hit-common/src/: config.rs  error.rs  event.rs  lib.rs  log.rs  paths.rs  session.rs
crates/hit-core/: Cargo.toml
crates/hit-core/src/: health.rs  lib.rs
crates/hit-core/src/bucket/: git_client.rs  index.rs  mod.rs  types.rs
crates/hit-core/src/compress/: installer.rs  mod.rs  sevenz.rs  tar.rs  zip.rs
crates/hit-core/src/download/: cache.rs  http.rs  mod.rs
crates/hit-core/src/hash/: mod.rs
crates/hit-core/src/install/: controller.rs  dependency.rs  mod.rs  persist.rs  shim.rs  transaction.rs
crates/hit-core/src/manifest/: diagnostic.rs  mod.rs  parser.rs  schema.rs  validator.rs  variables.rs
crates/hit-core/src/store/: migration.rs  mod.rs  models.rs
crates/hit-core/src/win/: env.rs  fs.rs  mod.rs  process.rs  registry.rs  uac.rs
crates/hit-core/tests/: event_bus_flow.rs  install_integration.rs  manifest_parser.rs  manifest_smoke.rs  manifest_test.rs  manifest_validator.rs  manifest_variables.rs
crates/hit-shim/: Cargo.toml
crates/hit-shim/src/: lib.rs  main.rs  parse.rs  process.rs
crates/hit-test-utils/: Cargo.toml
crates/hit-test-utils/src/: lib.rs
docs/: DEV_FLOW.md  FEATURES.md  MANIFEST_FORMAT.md  OVERVIEW.md  PROJECT_STRUCTURE.md  REFERENCE_PROJECTS.md  ROADMAP.md  TECH_STACK.md  TODO.md  WINDOWS_NOTES.md
docs/bugs/: BUGS.md  CHAT_GROUP.md  REPORT.md  SOLVED_BUGS.md  TEST_FLOW.md
docs/guides/: DEV_FLOW.md  TECH_STACK.md  WINDOWS_NOTES.md
docs/notes/: EUREKA.md
docs/notes/review/: REVIEW_1.1.md  REVIEW_1.2.md  REVIEW_2025-06-12.md
docs/plan/: EUREKA.md  FEATURES.md  PROJECT.md  PROJECT_STRUCTURE.md  ROADMAP.md  TODO.md
docs/review/: REVIEW_1.1.md  REVIEW_1.10.1.md  REVIEW_1.10.2.md  REVIEW_1.10.md  REVIEW_1.11.md  REVIEW_1.12.md  REVIEW_1.2.md  REVIEW_1.3.md  REVIEW_1.4.md  REVIEW_1.5.md  REVIEW_1.6.md  REVIEW_1.7.md  REVIEW_1.8.md  REVIEW_1.9.md  REVIEW_2.2.md  REVIEW_2.3.md  REVIEW_3.1.md  REVIEW_3.3.md
docs/spec/: MANIFEST_FORMAT.md  REFERENCE_PROJECTS.md
docs/trae/: forum-post.md  forum-post.origin.md
ref/: Microsoft.PowerShell_profile.ps1  对话.md
scripts/: add-main.ps1  deploy.ps1  install-hit.ps1  release.ps1  run-tests.ps1  setup-buckets.ps1  uninstall-env.ps1  uninstall-hit.ps1
