[workspace]
members = [
    "crates/hit-common",
    "crates/hit-core",
    "crates/hit-shim",
    "crates/hit-cli",
    "crates/hit-test-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# 内部 crate
hit-common = { path = "crates/hit-common" }
hit-core = { path = "crates/hit-core" }
hit-shim = { path = "crates/hit-shim" }
hit-cli = { path = "crates/hit-cli" }
hit-test-utils = { path = "crates/hit-test-utils" }

# 通用
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.3"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
flume = "0.11"
once_cell = "1"

# hit-core
git2 = "0.19"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
blake3 = "1"
zip = "2"
sevenz-rust = "0.11"
tar = "0.4"
flate2 = "1"
petgraph = "0.6"
rayon = "1"
tempfile = "3"
junction = "1"
sysinfo = "0.33"
winreg = "0.55"
windows = "0.58"
regex = "1"
url = "2"

# hit-cli
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
colored = "2"
ratatui = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
