[package]
name = "hit-cli"
version.workspace = true
edition.workspace = true
description = "Hit 命令行入口：clap 命令树（含 alias）+ EventBus 进度渲染 + ratatui TUI"

[[bin]]
name = "hit"
path = "src/main.rs"

[dependencies]
hit-common = { workspace = true }
hit-core = { workspace = true }
hit-shim = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
flume = { workspace = true }
ratatui = { workspace = true }
crossterm = "0.28"

[target.'cfg(windows)'.dependencies]
junction = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
