[package]
name = "hit-common"
version.workspace = true
edition.workspace = true
description = "Hit 基础类型库：error / config / paths / session / event bus"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
flume = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
