[package]
name = "hit-core"
version.workspace = true
edition.workspace = true
description = "Hit 核心业务逻辑：manifest / bucket / download / compress / store / install / win"

[dependencies]
hit-common = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
gix = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
