[package]
name = "hit-core"
version.workspace = true
edition.workspace = true
description = "Hit 核心业务逻辑：manifest / bucket / download / compress / store / install / win"

[dependencies]
hit-common = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
gix = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
blake3 = { workspace = true }
zip = { workspace = true }
sevenz-rust2 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
bzip2 = { workspace = true }
xz2 = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]

[target.'cfg(windows)'.dependencies]
junction = { workspace = true }
sysinfo = { workspace = true }
winreg = { workspace = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
